for mobile screen adaptability: added align-items:center property for the sheets

--- a/style.css
+++ b/style.css
@@ -28,6 +28,7 @@ body{
   width:100vw;
   display:flex;
   justify-content:center;
+  align-items:center;
   color:rgb(55, 0, 255);
   font-style:italic;
   text-decoration:overline underline;
